Add parameter -ImportTestDataInBcContainer in Run-AlPipeline to allow for overriding and supporting test data
Add configuration setting: timeStampServer (default timeStampServer for Sign-AppInBcContainer)
Add parameter timeStampServer to Sign-AppInBcContainer to allow overriding the timeStampServer
Fix Extract-AppFileToFolder to include missing properties and honor runtime version
Add parameter useLatestAlLanguageExtension to Run-AlPipeline
Add new function Run-AlCops to run AL cops in existing container
Add new function Run-AlValidation to run and end 2 end AL validation with multiple versions and multiple countries
Issue #1507 Sort-AppFilesByDependencies crashes if two different versions of the same app is specified
Issue #1496 Add ruleset parameter to Run-AlPipeline

1.0.14
Add parameter -features to Compile-AppInBcContainer to add support of the alc features parameter
Add parameter -bakFile to Restore-BcDatabaseFromArtifacts to allow restoring custom database using the artifact binaries
Issue #1426 performance test samples are installed before performance test toolkit
Clean-BcContainerDatabase will now cleanup Schema and company when -doNotSaveData is specified
UnInstall-BcContainerApp will now cleanup Schema when -doNotSaveData is specified together with -doNotSaveSchema
Regression: Backup-BcContainerDatabases couldn't backup the tenant template database when specified
Setting default container memory size to 8Gb when using hyperv
Remove references to specific images

1.0.13
Issue #1414 the magic setting defaultTenantHasAllowAppDatabaseWrite=Y is not used when using -cleandatabase or -newdatabase
Add parameter -publishedOnly to Get-BcContainerAppInfo to get published apps (no tenant specified)
Add parameter -doNotCopyDatabase to New-BcContainerTenant to mount an existing database (move from other container)
Add parameter -doNotRemoveDatabase to Remove-BcContainerTenant to avoid removing the database (move to other container)