@@ -78,6 +78,10 @@
   Including the keepContainer switch causes the container to not be deleted after the pipeline finishes.
  .Parameter updateLaunchJson
   Including the updateLaunchJson switch causes the launch.json file in each project to be updated with container information to be able to start debugging right away.
+ .Parameter vsixFile
+  Specify a URL or path to a .vsix file in order to override the .vsix file in the image with this.
+  Use Get-LatestAlLanguageExtensionUrl to get latest AL Language extension from Marketplace.
+  Use Get-AlLanguageExtensionFromArtifacts -artifactUrl (Get-BCArtifactUrl -select NextMajor -sasToken $insiderSasToken) to get latest insider .vsix
  .Parameter enableCodeCop
   Include this switch to include Code Cop Rules during compilation.
  .Parameter enableAppSourceCop
@@ -165,7 +169,7 @@ Param(
     [switch] $doNotRunTests,
     [switch] $keepContainer,
     [string] $updateLaunchJson = "",
-    [switch] $useLatestAlLanguageExtension,
+    [string] $vsixFile = "",
     [switch] $enableCodeCop,
     [switch] $enableAppSourceCop,
     [switch] $enableUICop,
@@ -555,17 +559,13 @@ Measure-Command {
         "useGenericImage" = $useGenericImage
         "Credential" = $credential
         "auth" = 'UserPassword'
+        "vsixFile" = $vsixFile
         "updateHosts" = $true
         "licenseFile" = $licenseFile
         "EnableTaskScheduler" = $enableTaskScheduler
         "AssignPremiumPlan" = $assignPremiumPlan
         "MemoryLimit" = $memoryLimit
         "additionalParameters" = @("--volume ""$($baseFolder):c:\sources""")
-    }
-    if ($useLatestAlLanguageExtension) {
-        $Parameters += @{
-            "vsixFile" = Get-LatestAlLanguageExtensionUrl
-        }
     }
 
     Invoke-Command -ScriptBlock $NewBcContainer -ArgumentList $Parameters
@@ -735,7 +735,7 @@ Write-Host -ForegroundColor Yellow @'
         }
         if ("$rulesetFile" -ne "" -or $useDefaultAppSourceRuleSet) {
             if ($useDefaultAppSourceRuleSet) {
-                Write-Host "Creating ruleset for default AppSource ruleset"
+                Write-Host "Creating ruleset for pipeline"
                 $ruleset = [ordered]@{
                     "name" = "Run-AlPipeline RuleSet"
                     "description" = "Generated by Run-AlPipeline"
