@@ -99,7 +99,7 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Get-BcContainerSession', 'Get-BcContainerSharedFolders', 
                'Get-BcContainerTenants', 'Get-BestBcContainerImageName', 
                'Get-BestGenericImageName', 'Get-CompanyInBcContainer', 
-               'Get-LatestAlLanguageExtensionUrl', 'Get-LocaleFromCountry', 
+               'Get-LatestAlLanguageExtensionUrl', 'Get-AlLanguageExtensionFromArtifacts', 'Get-LocaleFromCountry', 
                'Get-NavArtifactUrl', 'Get-NavVersionFromVersionInfo', 
                'Get-TestsFromBcContainer', 'Import-BcContainerLicense', 
                'Import-ConfigPackageInBcContainer', 'Import-DeltasToNavContainer', 
